--- a/arc_statistics.ipynb
+++ b/arc_statistics.ipynb
@@ -42873,8 +42873,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "de6fe130-68ab-4b49-bf34-be40408e1aed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test': [{'input': [[3, 2], [7, 8]]}],\n",
+       " 'train': [{'input': [[8, 6], [6, 4]],\n",
+       "   'output': [[8, 6, 8, 6, 8, 6],\n",
+       "    [6, 4, 6, 4, 6, 4],\n",
+       "    [6, 8, 6, 8, 6, 8],\n",
+       "    [4, 6, 4, 6, 4, 6],\n",
+       "    [8, 6, 8, 6, 8, 6],\n",
+       "    [6, 4, 6, 4, 6, 4]]},\n",
+       "  {'input': [[7, 9], [4, 3]],\n",
+       "   'output': [[7, 9, 7, 9, 7, 9],\n",
+       "    [4, 3, 4, 3, 4, 3],\n",
+       "    [9, 7, 9, 7, 9, 7],\n",
+       "    [3, 4, 3, 4, 3, 4],\n",
+       "    [7, 9, 7, 9, 7, 9],\n",
+       "    [4, 3, 4, 3, 4, 3]]}]}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_input['00576224']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631f68fa-eb8a-4a58-bd35-ece0bec1abca",
    "metadata": {},
    "outputs": [],
    "source": []
